Fixed some merging bugs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hackuna-mattata",
-  "version": "0.1.0",
+  "name": "anonymous-chat",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
