--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
     "vite": "^6.2.1"
   },
   "dependencies": {
-    "create-vite": "^6.3.1"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
+    "@supabase/supabase-js": "^2.49.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "create-vite": "^6.3.1",
+    "react-icons": "^5.5.0"
   },
   "name": "hackuna-mattata",
   "version": "1.0.0",
   "description": "test",
   "main": "eslint.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
