--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^6.4.7",
     "@supabase/supabase-js": "^2.49.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "agora-rtc-sdk-ng": "^4.23.2",
     "create-vite": "^6.3.1",
     "react-icons": "^5.5.0"
   },
