--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "agora-react-uikit": "^1.2.0",
+    "agora-rtc-sdk-ng": "^4.23.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
